objects/Account.object
<CustomObject>
    <fields>
        <fullName>Data_Deploy__c</fullName>
        <label>Data Deploy</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Deliverables__c</fullName>
        <label>Deliverables</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Discrete__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Discrete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Package_Creation__c</fullName>
        <label>Package Creation</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pipeline_Test__c</fullName>
        <label>Pipeline Test</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Platform__c</fullName>
        <label>Platform</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Priority_Description__c</fullName>
        <label>Priority Description</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Taxes__c</fullName>
        <label>Taxes</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Topography__c</fullName>
        <label>Topography</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Version_2__c</fullName>
        <label>Version 2</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>AllAccounts</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.SITE</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <label>All Accounts</label>
    </listViews>
    <listViews>
        <fullName>MyAccounts</fullName>
        <filterScope>Mine</filterScope>
        <label>My Accounts</label>
    </listViews>
    <listViews>
        <fullName>NewThisWeek</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.SITE</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>New This Week</label>
    </listViews>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>